# pooled-re-agent

./: .gitignore  README.md  pyproject.toml
deploy/nats/: README.md  docker-compose.yml  nats-server.conf
src/re_agent/agents/: loop.py  reverser.py  source_context.py
src/re_agent/backend/: ghidra_bridge.py
src/re_agent/cli/: cmd_agent.py  cmd_enqueue.py  cmd_init.py  cmd_serve.py  main.py
src/re_agent/config/: defaults.py  loader.py  schema.py
src/re_agent/core/: function_picker.py  session.py
src/re_agent/llm/: claude_code.py  registry.py
src/re_agent/orchestrator/: single.py
src/re_agent/server/: __init__.py  app.py  service.py
src/re_agent/transport/: __init__.py  base.py  fake.py  nats_conn.py  protocol.py  wire.py
src/re_agent/worker/: __init__.py  app.py  remote_backend.py  remote_source_context.py
tests/test_backend/: test_ghidra_bridge.py
tests/test_cli/: test_main.py
tests/test_config/: test_loader.py
tests/test_core/: test_session_leasing.py
tests/test_llm/: test_claude_code.py  test_protocol.py
tests/test_server/: test_service.py
tests/test_transport/: test_remote_backend.py  test_wire.py
