[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "re-agent"
version = "0.1.0"
description = "Autonomous reverse-engineering agent with a source-aware reverser/checker loop, objective verification, parity checks, and a Ghidra backend"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Dryxio" }]
keywords = ["reverse-engineering", "ghidra", "llm", "autonomous-agent", "binary-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
]
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "openai>=1.0",
]

[project.optional-dependencies]
ghidra-bridge = ["ghidra-ai-bridge>=0.1.0"]
# NATS pooling: shared by both roles.
nats = ["nats-py>=2.6"]
# Orchestrator (project host): Ghidra backend + NATS server.
orchestrator = ["nats-py>=2.6", "ghidra-ai-bridge>=0.1.0"]
# Pooled agent (volunteer): NATS + LLM SDKs, no Ghidra/source tree needed.
agent = ["nats-py>=2.6"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.8", "mypy>=1.13", "nats-py>=2.6"]

[project.scripts]
re-agent = "re_agent.cli.main:main"

[project.urls]
Homepage = "https://github.com/dryxio/auto-re-agent"
Repository = "https://github.com/dryxio/auto-re-agent"
Issues = "https://github.com/dryxio/auto-re-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/re_agent"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*", "nats.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "llm: tests that require LLM API keys",
    "ghidra: tests that require ghidra-ai-bridge",
]
